--- a/StableEMRIFisher_Example.ipynb
+++ b/StableEMRIFisher_Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e8e5b091",
    "metadata": {},
    "outputs": [],
@@ -14,11 +14,10 @@
     "\n",
     "gpu_available = True\n",
     "\n",
-    "\n",
     "from few.trajectory.inspiral import EMRIInspiral\n",
     "from few.amplitude.romannet import RomanAmplitude\n",
     "from few.amplitude.interp2dcubicspline import Interp2DAmplitude\n",
-    "from few.waveform import FastSchwarzschildEccentricFlux, SlowSchwarzschildEccentricFlux\n",
+    "from few.waveform import FastSchwarzschildEccentricFlux, SlowSchwarzschildEccentricFlux, GenerateEMRIWaveform\n",
     "from few.utils.utility import get_overlap, get_mismatch, get_separatrix, get_fundamental_frequencies\n",
     "from few.utils.ylm import GetYlms\n",
     "from few.utils.modeselector import ModeSelector\n",
@@ -35,13 +34,12 @@
     "import time\n",
     "import warnings\n",
     "\n",
-    "    \n",
-    "traj = EMRIInspiral(func=\"pn5\")"
+    "use_gpu=True    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6cfc46ba",
    "metadata": {},
    "outputs": [],
@@ -51,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ed52cde0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set initial parameters (default parameters in FEW 5PNAAK Documentation)\n",
+    "#set initial parameters\n",
     "M = 1e6\n",
     "mu = 10\n",
     "a = 0.9\n",
     "p0 = 8.05\n",
     "e0 = 0.1\n",
-    "iota0 = 1.0\n",
+    "iota0 = 0.0 #equatorial\n",
     "Y0 = np.cos(iota0)\n",
     "Phi_phi0 = 2\n",
     "Phi_theta0 = 3\n",
@@ -75,7 +73,39 @@
     "dist = 1\n",
     "mich = True #mich = True implies output in hI, hII long wavelength approximation\n",
     "dt = 10.0\n",
-    "T = 1.0"
+    "T = 0.1\n",
+    "\n",
+    "inspiral_kwargs = {\n",
+    "        \"DENSE_STEPPING\": 0,\n",
+    "        \"max_init_len\": int(1e3),\n",
+    "        \"err\": 1e-10,  # To be set within the class\n",
+    "        \"use_rk4\": True,\n",
+    "        }\n",
+    "# keyword arguments for summation generator (AAKSummation)\n",
+    "sum_kwargs = {\n",
+    "    \"use_gpu\": True,  # GPU is available for this type of summation\n",
+    "    \"pad_output\": True,\n",
+    "}\n",
+    "amplitude_kwargs = {\n",
+    "    \"specific_spins\":[0.80, 0.9, 0.95]\n",
+    "    }\n",
+    "\n",
+    "Waveform_model = GenerateEMRIWaveform('KerrEccentricEquatorialFlux', inspiral_kwargs=inspiral_kwargs, sum_kwargs=sum_kwargs, use_gpu=use_gpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cdf4350-89c1-4709-b1aa-777231d048eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "waveform = cp.asnumpy(Waveform_model(M, mu, a, p0, e0, Y0, \n",
+    "                          dist, qS, phiS, qK, phiK, \n",
+    "                          Phi_phi0, Phi_theta0, Phi_r0, \n",
+    "                          mich=mich, dt=dt, T=T))\n",
+    "\n",
+    "plt.plot(waveform[-1000:])"
    ]
   },
   {
@@ -85,9 +115,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#varied parameters\n",
+    "param_names = ['M','mu','a','p0','e0']\n",
+    "\n",
     "#initialization\n",
     "sef = StableEMRIFisher(M, mu, a, p0, e0, Y0, dist, qS, phiS, qK, phiK,\n",
-    "              Phi_phi0, Phi_theta0, Phi_r0, dt, T,\n",
+    "              Phi_phi0, Phi_theta0, Phi_r0, dt, T, EMRI_waveform_gen=Waveform_model,\n",
+    "              param_names=param_names, stats_for_nerds=False,\n",
     "              filename='TestRun', CovMat=True, CovEllipse=True)\n",
     "\n",
     "#execution\n",
@@ -119,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
