--- a/validation/derivatives.ipynb
+++ b/validation/derivatives.ipynb
@@ -91,7 +91,7 @@
     "fish = StableEMRIFisher(M, mu, a, p0, e0, Y0, dist, qS, phiS, qK, phiK,\n",
     "              Phi_phi0, Phi_theta0, Phi_r0, dt=dt, T=T, EMRI_waveform_gen=waveform_model,\n",
     "              param_names=param_names, stats_for_nerds=True, use_gpu=True,\n",
-    "              filename='', CovMat=True, CovEllipse=True, Live_Dangerously=True, der_order=4, )\n",
+    "              filename='', CovEllipse=True, live_dangerously=True, der_order=4, )\n",
     "\n"
    ]
   },
@@ -185,7 +185,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fastemriwaveforms",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -199,9 +199,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
