additional parameters in deriv

--- a/sef_newderivs_noresponse.ipynb
+++ b/sef_newderivs_noresponse.ipynb
@@ -74,7 +74,15 @@
    "execution_count": 3,
    "id": "08161222-181b-450c-bfe5-7acfd22cb367",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for derivative init:  2.5399575233459473\n"
+     ]
+    }
+   ],
    "source": [
     "sef = StableEMRIFisher(waveform_class=waveform_class, \n",
     "                       waveform_class_kwargs=waveform_class_kwargs,\n",
@@ -86,9 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "b0a66941-7a85-46ae-868c-cbb82db7f29e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -98,13 +108,332 @@
       "wave ndim: 2\n",
       "Computing SNR for parameters: {'m1': 1000000.0, 'm2': 10.0, 'a': 0.0, 'p0': 9.5, 'e0': 0.4, 'xI0': 1.0, 'dist': 0.1, 'qS': 1.0471975511965976, 'phiS': 0.7853981633974483, 'qK': 0.5235987755982988, 'phiK': 0.39269908169872414, 'Phi_phi0': 1.0, 'Phi_theta0': 0.0, 'Phi_r0': 0.0}\n",
       "Waveform Generated. SNR: 3544.2316640126287\n",
-      "calculating stable deltas...\n",
-      "stable deltas: {'Phi_r0': 0.0}\n",
-      "Time taken to compute stable deltas is 0.11549496650695801 seconds\n",
-      "calculating Fisher matrix...\n",
-      "Finished derivatives\n",
-      "Calculated Fisher is *atleast* positive-definite.\n",
-      "Time taken to compute FM is 0.11397075653076172 seconds\n"
+      "calculating stable deltas...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Overriding include_minus_mkn to True as mode_selection is not a list.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for trajectory generation:  0.004872798919677734\n",
+      "time for mode selection:  0.01762557029724121\n",
+      "total time for amplitudes generation (first run):  0.02095818519592285\n",
+      "time for waveform generation:  0.13452744483947754\n",
+      "time for trajectory generation:  0.004598140716552734\n",
+      "time for trajectory generation:  0.004843235015869141\n",
+      "time for trajectory generation:  0.0063724517822265625\n",
+      "time for trajectory generation:  0.008701086044311523\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n",
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  2.49458909034729\n",
+      "total time for amplitudes generation (subsequent run):  2.4956698417663574\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.7194323539733887\n",
+      "total time for amplitudes generation (subsequent run):  1.7203996181488037\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.73710036277771\n",
+      "total time for amplitudes generation (subsequent run):  1.7380001544952393\n",
+      "time for mode selection:  1.7001426219940186\n",
+      "total time for amplitudes generation (subsequent run):  1.70102858543396\n",
+      "Gamma_ii for m1: 2143.4137777649357\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for waveform generation:  5.698204040527344e-05\n",
+      "time for trajectory generation:  0.004409074783325195\n",
+      "time for trajectory generation:  0.0044977664947509766\n",
+      "time for trajectory generation:  0.004914522171020508\n",
+      "time for trajectory generation:  0.0051996707916259766\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.6517930030822754\n",
+      "total time for amplitudes generation (subsequent run):  1.6526291370391846\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.631577491760254\n",
+      "total time for amplitudes generation (subsequent run):  1.6323800086975098\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.6413111686706543\n",
+      "total time for amplitudes generation (subsequent run):  1.6422162055969238\n",
+      "time for mode selection:  1.7462401390075684\n",
+      "total time for amplitudes generation (subsequent run):  1.747347354888916\n",
+      "Gamma_ii for m1: 2143.413777774054\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for waveform generation:  5.5789947509765625e-05\n",
+      "time for trajectory generation:  0.004209995269775391\n",
+      "time for trajectory generation:  0.00435948371887207\n",
+      "time for trajectory generation:  0.004420042037963867\n",
+      "time for trajectory generation:  0.0045452117919921875\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.6252472400665283\n",
+      "total time for amplitudes generation (subsequent run):  1.6260907649993896\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.6290271282196045\n",
+      "total time for amplitudes generation (subsequent run):  1.6298272609710693\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.7056784629821777\n",
+      "total time for amplitudes generation (subsequent run):  1.7064704895019531\n",
+      "time for mode selection:  1.7464427947998047\n",
+      "total time for amplitudes generation (subsequent run):  1.7474896907806396\n",
+      "Gamma_ii for m1: 2143.41377770048\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for waveform generation:  5.459785461425781e-05\n",
+      "time for trajectory generation:  0.00432586669921875\n",
+      "time for trajectory generation:  0.004582405090332031\n",
+      "time for trajectory generation:  0.004671812057495117\n",
+      "time for trajectory generation:  0.005031108856201172\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.782304048538208\n",
+      "total time for amplitudes generation (subsequent run):  1.7832229137420654\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.7757556438446045\n",
+      "total time for amplitudes generation (subsequent run):  1.7767415046691895\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.5061440467834473\n",
+      "total time for amplitudes generation (subsequent run):  1.5069234371185303\n",
+      "time for mode selection:  1.4544882774353027\n",
+      "total time for amplitudes generation (subsequent run):  1.4552574157714844\n",
+      "Gamma_ii for m1: 2143.4137775932927\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for waveform generation:  4.124641418457031e-05\n",
+      "time for trajectory generation:  0.00412750244140625\n",
+      "time for trajectory generation:  0.0038247108459472656\n",
+      "time for trajectory generation:  0.0038661956787109375\n",
+      "time for trajectory generation:  0.003801584243774414\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.435039758682251\n",
+      "total time for amplitudes generation (subsequent run):  1.435856819152832\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(ModeSelector) Warning: Mode selection is large. Instantiate class with mode selection rather than providing it at call time for better performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for mode selection:  1.6292967796325684\n",
+      "total time for amplitudes generation (subsequent run):  1.630324363708496\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -125,7 +454,7 @@
     "Phi_r0 = 0.0\n",
     "\n",
     "pars_list = [m1, m2, a, p0, e0, xI0, dist, qS, phiS, qK, phiK, Phi_phi0, Phi_theta0, Phi_r0]\n",
-    "param_names = ['Phi_r0']\n",
+    "param_names = ['m1']\n",
     "\n",
     "der_order = 4\n",
     "Ndelta = 8\n",
