SNR calc change

--- a/sef_newderivs_response-fullFM.ipynb
+++ b/sef_newderivs_response-fullFM.ipynb
@@ -29,7 +29,7 @@
     "#    print(\"Not on GPU\")\n",
     "#    use_gpu = False\n",
     "\n",
-    "use_gpu = True\n",
+    "use_gpu = False\n",
     "\n",
     "from stableemrifisher.fisher.fisher import StableEMRIFisher\n",
     "from stableemrifisher.utils import inner_product\n",
@@ -118,6 +118,36 @@
     "                       noise_model=noise_model, noise_kwargs=noise_kwargs, channels=channels,\n",
     "                      stats_for_nerds = True, use_gpu = use_gpu,\n",
     "                      deriv_type='stable')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ff539b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = 1e6\n",
+    "m2 = 1e1\n",
+    "a = 0.\n",
+    "p0 = 9.5\n",
+    "e0 = 0.4\n",
+    "xI0 = 1.0\n",
+    "dist = 0.1\n",
+    "qS = np.pi/3\n",
+    "phiS = np.pi/4\n",
+    "qK = np.pi/6\n",
+    "phiK = np.pi/8\n",
+    "Phi_phi0 = 1.0\n",
+    "Phi_theta0 = 0.0\n",
+    "Phi_r0 = 0.0\n",
+    "\n",
+    "pars_list = [m1, m2, a, p0, e0, xI0, dist, qS, phiS, qK, phiK, Phi_phi0, Phi_theta0, Phi_r0]\n",
+    "param_names = ['m1','m2','p0','e0','dist','qS','phiS','qK','phiK','Phi_phi0','Phi_r0']\n",
+    "\n",
+    "emri_kwargs = {\"T\":T, \"dt\":dt}\n",
+    "\n",
+    "sef.SNRcalc_SEF(*pars_list,**emri_kwargs)"
    ]
   },
   {
