SNR calc change

--- a/sef_newderivs_response-fullFM.ipynb
+++ b/sef_newderivs_response-fullFM.ipynb
@@ -122,10 +122,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e5ff539b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wave ndim: 2\n",
+      "Computing SNR for parameters: {}\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'StableEMRIFisher' object has no attribute 'window'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     17\u001b[39m param_names = [\u001b[33m'\u001b[39m\u001b[33mm1\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mm2\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mp0\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33me0\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mdist\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mqS\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mphiS\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mqK\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mphiK\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mPhi_phi0\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mPhi_r0\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     19\u001b[39m emri_kwargs = {\u001b[33m\"\u001b[39m\u001b[33mT\u001b[39m\u001b[33m\"\u001b[39m:T, \u001b[33m\"\u001b[39m\u001b[33mdt\u001b[39m\u001b[33m\"\u001b[39m:dt}\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[43msef\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSNRcalc_SEF\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mpars_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43memri_kwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/media/shubham/Ubuntu-HDD/College/PhD/Projects/StableEMRIFisher/gpu_fix/StableEMRIFisher/stableemrifisher/fisher/fisher.py:429\u001b[39m, in \u001b[36mStableEMRIFisher.SNRcalc_SEF\u001b[39m\u001b[34m(self, *waveform_args, **waveform_kwargs)\u001b[39m\n\u001b[32m    426\u001b[39m \u001b[38;5;66;03m# Compute SNR\u001b[39;00m\n\u001b[32m    427\u001b[39m logger.info(\u001b[33m\"\u001b[39m\u001b[33mComputing SNR for parameters: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m\"\u001b[39m, \u001b[38;5;28mself\u001b[39m.wave_params)\n\u001b[32m--> \u001b[39m\u001b[32m429\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m SNRcalc(\u001b[38;5;28mself\u001b[39m.waveform, \u001b[38;5;28mself\u001b[39m.PSD_funcs, dt=dt, window=\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mwindow\u001b[49m, fmin=\u001b[38;5;28mself\u001b[39m.fmin, fmax=\u001b[38;5;28mself\u001b[39m.fmax, use_gpu=\u001b[38;5;28mself\u001b[39m.use_gpu)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'StableEMRIFisher' object has no attribute 'window'"
+     ]
+    }
+   ],
    "source": [
     "m1 = 1e6\n",
     "m2 = 1e1\n",
