bug fix for source angles

--- a/examples/notebooks/sef_newderivs_noresponse.ipynb
+++ b/examples/notebooks/sef_newderivs_noresponse.ipynb
@@ -150,11 +150,11 @@
     "Phi_theta0 = 0.0\n",
     "Phi_r0 = 0.0\n",
     "\n",
-    "pars_list = [m1, m2, a, p0, e0, xI0, dist, qS, phiS, qK, phiK, Phi_phi0, Phi_theta0, Phi_r0]\n",
-    "param_names = ['p0']\n",
+    "pars_list = [m1, m2, a, p0, e0, xI0, dist, qS, phiS, qK, phiK, Phi_phi0, Phi_theta0, Phi_r0] #all parameters for the waveform generator\n",
+    "param_names = ['p0'] #which parameter to take derivative w.r.t\n",
     "\n",
-    "der_order = 4\n",
-    "Ndelta = 8\n",
+    "der_order = 4 #order of accuracy in the finite-difference derivative\n",
+    "Ndelta = 8 \n",
     "stability_plot = True\n",
     "\n",
     "delta_range = dict(\n",
